--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -13,9 +13,8 @@ block content
 
 	main.single-task-page
 		.container
-			.task-card.pb-110
-				.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
-				
+			.task-card
+				.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё одну строчку
 					
 				a(href="location-page.html" ).link-right Показать на карте
 				
@@ -23,7 +22,7 @@ block content
 				
 				.tc__notice Внимание! Осталось #[span 22 ч. 29 мин.] на принятие решения по заказу
                 
-				.tc__footer.fixed-bottom
+				.tc__footer.mt-20
 					a(href="single-task-page.html" ).btn Принять
 					a(href="chat-page.html").link-right Чат с оператором
 					
