--- a/src/scss/pages/single-task-page.scss
+++ b/src/scss/pages/single-task-page.scss
@@ -6,3 +6,8 @@
 	}
 	.link-righ{margin-top: remy(10)!important;}
 }
+.single-task-page{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
