--- a/src/pug/pages/current-task-page.pug
+++ b/src/pug/pages/current-task-page.pug
@@ -26,37 +26,10 @@ block content
 					p.txt-14 Осталось времени до выезда на объект	
 			
 				//========= карточка с описанием ==========
-				.current-task-card.toggle-class.pb-110.open
-					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
+				.current-task-card
+					button.btn-outline(frame-btn="task-description") Подробнее о задаче
 					
-					.hide-details__close.toggle-class-remove
-						p Подробнее о задаче
-						svg.svg-chevron
-							use(href="./img/spriteSvg.svg#svg-chevron")
-							
-						//========== скрытый блок ==========
-					.hide-details.tc__body
-						//=========== task description =========
-						.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
-						
-						.tc__price Потенциальная оплата: #[span 20 000] ₽ 
-					
-						.tc__date
-							.tc__cell Дата начало: #[span 08.10.23] в 
-							.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
-
-						.tc__time
-							.time-start Время начала труд. дня: #[span  9:00] 
-							.time-finish Время окончания  труд. дня: #[span 19:00]
-						
-						.tc__contractor Кол-во людей: #[span 6]
-						
-						.tc__requir Требования к форме: требуется, выдадут на месте
-						.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
-						
-						a(href="location-page.html").link-right Показать на карте
-					
-					.tc__footer.fixed-bottom
+					.tc__footer.mt-20
 						a(href="#!" frame-btn="location").btn Выезд на объект
 						a(href="chat-page.html" ).btn-outline.link-right
 							span Чат с оператором
@@ -100,7 +73,7 @@ block content
 			
 			//========= карточка с описанием ==========
 			.single-task-details.box-shadow
-				//==========видимая часть ==========
+				
 				.visible-details
 					.hide-details__open.toggle-class-add#swipe1
 					
@@ -116,29 +89,14 @@ block content
 						p.txt-14 Осталось времени до выезда на объект				
 				
 				
-				//========== скрытый блок ==========
+				
 				.hide-details.tc__body
-					.hide-details__close.toggle-class-remove
+					.hide-details__close
 						p Подробнее о задаче
 						svg.svg-chevron
 							use(href="./img/spriteSvg.svg#svg-chevron")
 						
-					//=========== task description =========
-					.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
 					
-					.tc__price Потенциальная оплата: #[span 20 000] ₽ 
-				
-					.tc__date
-						.tc__cell Дата начало: #[span 08.10.23] в 
-						.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
-
-					.tc__time
-						.time-start Время начала труд. дня: #[span  9:00] 
-						.time-finish Время окончания  труд. дня: #[span 19:00]
-					
-					.tc__contractor Кол-во людей: #[span 6]
-					
-					.tc__requir Требования к форме: требуется, выдадут на месте
 
 	//========== макет 24 -  вкладка ВЫЕЗД НА ОБЪЕКТ =========
 	.single-task-location.single-task--current.toggle-class(frame-modal="visit-location")
@@ -247,7 +205,28 @@ block content
 					
 					.tc__requir Требования к форме: требуется, выдадут на месте
 
-	
+	//======== task-description popUp =========
+	.task-description.modal-frame-wrapper(frame-modal="task-description")
+		.modal-frame
+			.icon-close(frame-close)
+			.tc__body
+				//=========== task description =========
+				.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
+				
+				.tc__price Потенциальная оплата: #[span 20 000] ₽ 
+
+				.tc__date
+					.tc__cell Дата начало: #[span 08.10.23] в 
+					.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
+
+				.tc__time
+					.time-start Время начала труд. дня: #[span  9:00] 
+					.time-finish Время окончания  труд. дня: #[span 19:00]
+				
+				.tc__contractor Кол-во людей: #[span 6]
+				
+				.tc__requir Требования к форме: требуется, выдадут на месте
+				a(href="location-page.html").link-right Показать на карте
 
 block variables
 	-var title = "Задача. Подробнее";
