--- a/src/pug/pages/location-page.pug
+++ b/src/pug/pages/location-page.pug
@@ -20,10 +20,8 @@ block content
 					
 					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
 
-				//========== скрытый блок ==========
-				.hide-details.tc__body
-					.hide-details__close.toggle-class-remove(frame-btn="task-description")
-						button.btn-outline Подробнее о задаче
+				//========== Подробнее о задаче ==========
+				button.btn-outline(frame-btn="task-description") Подробнее о задаче
 						
 	.task-description.modal-frame-wrapper(frame-modal="task-description")
 		.modal-frame
