--- a/src/pug/layouts/layout-swipe-touch.pug
+++ b/src/pug/layouts/layout-swipe-touch.pug
@@ -13,7 +13,7 @@ html(lang="ru")
 		link(rel="stylesheet", href="css/main.css")
 		title !{title}
 		
-	body.ios-device
+	body
 		
 		
 		block content
