--- a/src/pug/pages/profile-location.pug
+++ b/src/pug/pages/profile-location.pug
@@ -23,7 +23,8 @@ block content
 			.profile-location-form.box-shadow
 				//==========видимая часть ==========
 				.visible-details
-					.hide-details__open.toggle-class-add#swipe1
+					.hide-details__open.toggle-class-add#swipe
+					
 					.custom-search.custom-drop
 						.custom-drop__input
 							input(type="text"  value="Введите название")
