--- a/src/pug/pages/large-22-23.pug
+++ b/src/pug/pages/large-22-23.pug
@@ -16,7 +16,7 @@ block content
 			.single-task-details.box-shadow
 				//==========видимая часть ==========
 				.visible-details
-					.hide-details__open.toggle-class-add#swipe1
+					.hide-details__open.toggle-class-add#swipe
 					
 					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
 					
@@ -35,11 +35,11 @@ block content
 	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a.active(href="index.html")
+			a(href="index.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
-			a(href="current-task-page.html")
+			a.active(href="current-task-page.html")
 				svg.svg-task
 					use(href="./img/spriteSvg.svg#svg-task")
 				span Текущ задача
