--- a/src/pug/pages/large-24.pug
+++ b/src/pug/pages/large-24.pug
@@ -9,7 +9,7 @@ block content
 				.btn-round-white
 					span.clock-icon
 				p Обратный отсчёт завершён. Необходимо начать работу
-				button.btn-back.btn-round(frame-close)
+				a(href="large-25.html").btn-back.btn-round
 			
 			//========= map ==========
 			.single-task-map
@@ -19,7 +19,7 @@ block content
 			.single-task-details.box-shadow
 				//==========видимая часть ==========
 				.visible-details
-					.hide-details__open.toggle-class-add#swipe2
+					.hide-details__open.toggle-class-add#swipe
 					
 					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
 					
@@ -39,11 +39,11 @@ block content
 	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a.active(href="index.html")
+			a(href="index.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
-			a(href="current-task-page.html")
+			a.active(href="current-task-page.html")
 				svg.svg-task
 					use(href="./img/spriteSvg.svg#svg-task")
 				span Текущ задача
