--- a/src/pug/pages/large-25.pug
+++ b/src/pug/pages/large-25.pug
@@ -1,37 +1,37 @@
-extends ../layouts/layout.pug
+extends ../layouts/layout-swipe-touch.pug
 
 block content
-	header.header.header-sticky
-		.container
-			.header-content
-				.header-content__abs
-					a(href="notifications.html").btn-notify
-						span.label-num 3
-						svg.svg-notify
-							use(href="./img/spriteSvg.svg#svg-notify")
-
-	main.stage-work
-		.container
-			.stage-work__content
-				h1.h1 Выполнение задачи
-				
-				.simple-card
-					p До конца рабочего дня:
-					p.txt-accent.title-20 0 ч. 0 мин. 0 сек.
-						
-
-				.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
-					
-					//========== Подробнее о задаче ==========
-				button.btn-outline(frame-btn="task-description") Подробнее о задаче
-						
-					
-				.stage-work__btn
-					a(href="task-page-finish-work-2.html").btn
-						span Завершил(а) выполнение
-						svg.svg-check
-								use(href="./img/spriteSvg.svg#svg-check")
 	
+	//==========Large -25 =========
+	.single-task-location.single-task--current.toggle-class
+		.custom-container.flex-column
+			.fix-header
+				a(href="large-24.html").btn-back.btn-round
+			
+			//========= map ==========
+			.single-task-map
+				script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&width=100%&height=100%&lang=ru_RU&scroll=false')
+			
+			//========= карточка с описанием ==========
+			.single-task-details.box-shadow
+				//==========видимая часть ==========
+				.visible-details
+					.hide-details__open.toggle-class-add#swipe
+					
+					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
+					
+					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
+
+					a(href="task-page-finish-work.html").btn Начал(а) выполнение задачи
+					
+					.simple-card
+						p Обратный отсчёт:
+						p.txt-accent.title-20 22 ч. 53 мин. 20 сек.
+						p.txt-14 Осталось времени до выезда на объект
+				
+				//========== Подробнее о задаче ==========
+				button.btn-outline(frame-btn="task-description") Подробнее о задаче
+					
 	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
@@ -39,21 +39,19 @@ block content
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
-			
 			a.active(href="current-task-page.html")
 				svg.svg-task
 					use(href="./img/spriteSvg.svg#svg-task")
 				span Текущ задача
-			
 			a(href="rating-page.html")
 				svg.svg-rating
 					use(href="./img/spriteSvg.svg#svg-rating")
 				span Рейтинг
-			
 			a(href="profile-page.html")
 				svg.svg-profile
 					use(href="./img/spriteSvg.svg#svg-profile")
 				span Профиль
+
 	
 	//======== task-description popUp =========
 	.task-description.modal-frame-wrapper(frame-modal="task-description")
@@ -79,5 +77,4 @@ block content
 				a(href="location-page.html").link-right Показать на карте
 
 block variables
-	-var title = "Задача. Завершить";
-
+	-var title = "Задача. Подробнее";
