--- a/src/pug/pages/location-page.pug
+++ b/src/pug/pages/location-page.pug
@@ -14,7 +14,7 @@ block content
 			.single-task-details.box-shadow
 				//==========видимая часть ==========
 				.visible-details
-					.hide-details__open.toggle-class-add#swipe1
+					.hide-details__open.toggle-class-add#swipe
 					
 					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
 					
