--- a/src/pug/pages/large-24.pug
+++ b/src/pug/pages/large-24.pug
@@ -25,7 +25,7 @@ block content
 					
 					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
 
-					button(frame-btn="start-work").btn Прибыл(а) на объект
+					a(href="large-22-23.html").btn Прибыл(а) на объект
 					
 					.simple-card
 						p Обратный отсчёт:
